--- a/style.css
+++ b/style.css
@@ -326,6 +326,7 @@ body::-webkit-scrollbar {
 .oh{
     text-align: center;
     font-size: 30px;
+    color:white;
 }
 @media (max-width: 700px){
     #hideonpc{
