--- a/style.css
+++ b/style.css
@@ -17,6 +17,13 @@ body::-webkit-scrollbar {
 .home:hover{
     box-shadow: 0 4px 8px 0 rgba(133, 133, 133, 0.2), 0 6px 20px 0 rgba(116, 116, 116, 0.19);
 }
+.icon2{
+    width: 150px;
+    
+}
+@keyframes pop{
+    from{transform: translateX(200px);}
+}
 #MENUPOP{
     display: none;
     background-image: url(assets/favicon2\ \(1\).webp);
@@ -27,11 +34,39 @@ body::-webkit-scrollbar {
     right: 0;
     bottom: 1;
     flex-direction: column;
-    border-bottom-left-radius: 500px;
-    height: 50vh;
-    width: 40vh;
-    animation: pop 1s;
+    height: 100%;
+    width: 70%;
     z-index: 999;
+    justify-content: center;
+    align-items: center;
+    animation: pop 0.6s;
+}
+.active {
+    background-color: cyan;
+}
+.Page{
+    font-family: Josefin sans, 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+.pagebutton{
+    border-radius: 50px;
+    background-color: white;
+    border: solid;
+    border-width: 1px;
+    width: 40px;
+    height: 40px;
+    font-family: Josefin sans, 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+.pagebutton1{
+    border-radius: 50px;
+    background-color: cyan;
+    border: solid;
+    border-width: 1px;
+    width: 40px;
+    height: 40px;
+    font-family: Josefin sans, 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+.pagebutton:hover{
+    border-color: cyan;
 }
 #CLOSE-BTN{
     position: fixed;
@@ -41,9 +76,7 @@ body::-webkit-scrollbar {
     right: 10px;
 }
 
-@keyframes pop{
-    from{transform: translateX(50px) translateY(-200px);}
-}
+
 @keyframes slide-in-right{
     from{transform: translateX(-50px);}
     to{transform: translateX(0px);}
@@ -326,9 +359,27 @@ body::-webkit-scrollbar {
 .oh{
     text-align: center;
     font-size: 30px;
-    color:white;
 }
 @media (max-width: 700px){
+    .pagebutton{
+        border-radius: 30px;
+        background-color: white;
+        border: solid;
+        border-width: 1px;
+        padding: 1px;
+        width: 25px;
+        height: 25px;
+        font-family: Josefin sans, 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    }
+    .pagebutton1{
+        border-radius: 30px;
+        background-color: cyan;
+        border: solid;
+        border-width: 1px;
+        width: 25px;
+        height: 25px;
+        font-family: Josefin sans, 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    }
     #hideonpc{
         display: block;    
     }
@@ -344,8 +395,9 @@ body::-webkit-scrollbar {
     #landing-page{
         display: flex;
         flex-direction: column;
-        margin-top: 10vh;
+        margin-top: 20vh;
         text-align: center;
+        height: fit-content;
     }
     #display::placeholder{
         font-size: 20px;
@@ -504,7 +556,7 @@ body::-webkit-scrollbar {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: rgba(0, 0, 0, 0.95);
+    background-color: rgba(0, 0, 0, 0.8);
     z-index: 9999;
 }
 
@@ -526,6 +578,7 @@ body::-webkit-scrollbar {
     border-radius: 50%;
     background: rgba(255, 255, 255, 0.2);
 }
+
 @keyframes spin {
     to {
         transform: rotate(360deg);
@@ -537,3 +590,5 @@ body::-webkit-scrollbar {
     font-size: 24px;
     margin-top: 20px;
 }
+
+
