--- a/style.css
+++ b/style.css
@@ -10,6 +10,9 @@ body::-webkit-scrollbar {
 #hideonpc{
     display: none;
 }
+#FOOT{
+    background-color: white;
+}
 .home{
     border-width: 1px;
     border-radius: 3px;
@@ -283,6 +286,7 @@ body::-webkit-scrollbar {
     gap: 50px;
 }
 #UP-TOP{
+    display: none;
     position: fixed;
     top:1;
     bottom: 20px;
@@ -364,6 +368,9 @@ body::-webkit-scrollbar {
     width: 64px;
 }
 @media (max-width: 700px){
+    #switchToDark{
+        display: none;
+    }
     #BTTP{
         width: 50px;
     }
@@ -437,7 +444,9 @@ body::-webkit-scrollbar {
     .favdes{
         display: none;
     }
-
+    #UP-TOP{
+        display: block;
+    }
 }
 .favdes{
     font-family: josefin 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
@@ -522,12 +531,45 @@ body::-webkit-scrollbar {
 #surch2{
     padding: 10px;
     width: 40vw;
+    border-color: black;
 }
+#switchToDark{
+    width: 40px;
+    position: fixed;
+    bottom: 20px;
+    left: 0;
+    right: 1;
+    top:1;
+    background-color: #ffffff;
+    padding: 5px;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+    border-color: black;
+    border: solid;
+    cursor: pointer;
+}
+
+
 #display2{
     border: none;
     outline: none;
     width: 100%;
+    background-color: transparent;
+    font-family: josefin sans,'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color: black;
 }
+#loader2{
+    border-radius: 10px;
+}
+#loader3{
+    border-radius: 10px;
+}
+#loader4{
+    border-radius: 10px;
+}
+
+
+
 #display2::placeholder{
     color: black;
 }
