--- a/style.css
+++ b/style.css
@@ -176,6 +176,12 @@ body::-webkit-scrollbar {
     background-color: white;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
+.endIMg{
+    width: 50%;
+    border-radius: 10000px;
+    border-color: cyan;
+    border-width: 2px;
+}
 #wallpapers{
     display: grid;
     grid-template-columns: repeat(3 ,1fr);
