--- a/style.css
+++ b/style.css
@@ -188,7 +188,7 @@ body::-webkit-scrollbar {
     grid-template-columns: repeat(3 ,1fr);
     gap: 10px;
     padding: 20px;
-    
+    background-color: white;
 }
 #CONTACTS{
     height: fit-content;
@@ -380,6 +380,11 @@ body::-webkit-scrollbar {
     }
     #BTTP{
         width: 50px;
+    }
+    #CT2{
+        display: flex;
+        flex-direction: row;
+        font-size: 12px;
     }
     .pagebutton{
         border-radius: 30px;
@@ -647,3 +652,57 @@ body::-webkit-scrollbar {
 }
 
 
+/* Dropdown Button */
+.dropbtn {
+    background-color: #ffffff;
+    color: rgb(0, 0, 0);
+    padding: 10px;
+    border-color: black;
+    font-family: "Josefin Sans", sans-serif;
+    font-size: 15px;
+    border-radius: 4px;
+    border-width: 1px;
+    transition: 0.5s;
+    font-weight: bold;
+  }
+  
+  /* The container <div> - needed to position the dropdown content */
+  .dropdown {
+    position: relative;
+    display: inline-block;
+  }
+  
+  /* Dropdown Content (Hidden by Default) */
+  .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 70px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+  }
+  
+  /* Links inside the dropdown */
+  .dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+  
+  /* Change color of dropdown links on hover */
+  .dropdown-content a:hover {background-color: #ddd;}
+  
+  /* Show the dropdown menu on hover */
+  .dropdown:hover .dropdown-content {display: block;}
+  
+  /* Change the background color of the dropdown button when the dropdown content is shown */
+  .dropdown:hover .dropbtn {background-color: #ffffff;box-shadow: 0 4px 8px 0 rgba(133, 133, 133, 0.2), 0 6px 20px 0 rgba(116, 116, 116, 0.19);}
+
+  
+
+.heading2:hover{
+  cursor: pointer;
+  
+
+}
