--- a/style.css
+++ b/style.css
@@ -29,20 +29,27 @@ body::-webkit-scrollbar {
 }
 #MENUPOP{
     display: none;
-    background-image: url(assets/favicon2\ \(1\).webp);
-    background-repeat: no-repeat;
     position: fixed;
+    flex-direction: row;
     top: 0;
-    left: 1;
-    right: 0;
-    bottom: 1;
+    left: 0;
+    height: 100vh;
+    width: 100%; /* Adjust width as needed */
+    background-color: transparent;
+}
+#MP2{
+    background-color: transparent;
+    width: 50%;
+}
+.MP3{
+    background-image: url(assets/favicon2\ \(1\).webp);
+    display: flex;
     flex-direction: column;
-    height: 100%;
-    width: 100%;
-    z-index: 999;
+    width: 50%;
+    text-align: center;
     justify-content: center;
     align-items: center;
-    animation: pop 0.6s;
+    animation:pop 0.5s;
 }
 .active {
     background-color: cyan;
